<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:text="@string/id" style="@style/styleTextViewH4"/>
        <TextView android:id="@+id/DetailActivity_id" style="@style/styleTextViewH3"/>
    </LinearLayout>

    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:text="@string/datatime" style="@style/styleTextViewH4"/>
        <TextView android:id="@+id/DetailActivity_dataTime" style="@style/styleTextViewH3"/>
    </LinearLayout>

    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:text="@string/todoName"  style="@style/styleTextViewH4"/>
        <TextView android:id="@+id/DetailActivity_todoName" style="@style/styleTextViewH3"/>
    </LinearLayout>

    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:text="@string/todoEntry" style="@style/styleTextViewH4"/>
        <TextView android:id="@+id/DetailActivity_todoEntry" style="@style/styleTextViewH3"/>
    </LinearLayout>
    <Button
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete"/>
</LinearLayout>